Fix #120187: Over-allocation in multires sculpt undo nodes

4b427e1b579725f1757e confused `unode->maxgrid` and `unode->grids.size()`
which is the number of all grids in the mesh. A follow-up commit will
rename `maxgrid` to make that clearer.